--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.10+1
+  fl_chart: ^0.69.0
   go_router: ^14.3.0
 
 dev_dependencies:
